[package]
name = "frontend-environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["axum"]
axum = [
    "dep:axum",
    "dep:http-body",
    "dep:tower-http",
]

[dependencies]
lol_html = "1.0.1"

axum = { version = "0.6.18", features = ["headers"], optional = true }
tower-http = { version = "0.4.0", features = ["fs"], optional = true }
http-body = { version = "0.4.5", optional = true }
